--- a/dockercompose.service
+++ b/dockercompose.service
@@ -7,7 +7,8 @@ Type=simple
 # Another Type option: forking
 User=root
 WorkingDirectory=/home/ec2-user
-ExecStart=/usr/local/bin/docker-compose -f /home/ec2-user/docker-compose.yml up -d
+ExecStart=/home/ec2-user/start-docker-compose.sh
+ExecReload=/usr/local/bin/docker-compose -f /home/ec2-user/docker-compose.yml down && /usr/local/bin/docker-compose -f /home/ec2-user/docker-compose.yml up -d
 Restart=on-failure
 # Other Restart options: or always, on-abort, etc
 
